syntax = "proto2";
package hw.trezor.messages.solana;

import "messages-common.proto";

/**
 * Request: Ask device for public key corresponding to address_n path
 * @start
 * @next SolanaPublicKey
 * @next Failure
 */
message SolanaGetPublicKey {
    repeated uint32 address_n = 1;  // BIP-32 path to derive the key from master node
    optional bool show_display = 2; // optionally show on display before sending the result
}

/**
 * Response: Contains public key derived from device private seed
 * @end
 */
message SolanaPublicKey {
    required bytes public_key = 1;
}

